yung admin 2 bagong desgin ng admindashboard

--- a/Admin.html
+++ b/Admin.html
@@ -13,101 +13,15 @@
       <img src="newlogo1.png" alt="Rent-A-Read Logo">
       <h1>Admin Dashboard</h1>
     </div>
-    <nav class="admin-nav">
-      <a href="#users-section">Users</a>
-      <a href="#books-section">Books</a>
-      <a href="#orders-section">Orders</a>
-      <a href="#logout" class="logout-button">Logout</a>
-    </nav>
+    <button class="logout-button">Logout</button>
   </header>
-  
+
   <main class="admin-main">
-    <!-- Users Section -->
-    <section id="users-section" class="dashboard-section">
-      <h2>User Accounts</h2>
-      <table class="dashboard-table">
-        <thead>
-          <tr>
-            <th>User ID</th>
-            <th>Name</th>
-            <th>Email</th>
-            <th>Status</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>U001</td>
-            <td>John Doe</td>
-            <td>john.doe@example.com</td>
-            <td>Active</td>
-            <td>
-              <button class="edit-button">Edit</button>
-              <button class="delete-button">Delete</button>
-            </td>
-          </tr>
-          <!-- Repeat rows as needed -->
-        </tbody>
-      </table>
-    </section>
-
-    <!-- Books Section -->
-    <section id="books-section" class="dashboard-section">
-      <h2>Books Management</h2>
-      <table class="dashboard-table">
-        <thead>
-          <tr>
-            <th>Book ID</th>
-            <th>Title</th>
-            <th>Author</th>
-            <th>Availability</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>B001</td>
-            <td>The Great Gatsby</td>
-            <td>F. Scott Fitzgerald</td>
-            <td>Available</td>
-            <td>
-              <button class="edit-button">Edit</button>
-              <button class="delete-button">Delete</button>
-            </td>
-          </tr>
-          <!-- Repeat rows as needed -->
-        </tbody>
-      </table>
-    </section>
-
-    <!-- Orders Section -->
-    <section id="orders-section" class="dashboard-section">
-      <h2>Order Details</h2>
-      <table class="dashboard-table">
-        <thead>
-          <tr>
-            <th>Order ID</th>
-            <th>User</th>
-            <th>Book</th>
-            <th>Status</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>O001</td>
-            <td>John Doe</td>
-            <td>The Great Gatsby</td>
-            <td>Returned</td>
-            <td>
-              <button class="view-button">View</button>
-              <button class="update-button">Update</button>
-            </td>
-          </tr>
-          <!-- Repeat rows as needed -->
-        </tbody>
-      </table>
-    </section>
+    <div class="button-container">
+      <button onclick="location.href='users.html'" class="dashboard-button">User Accounts</button>
+      <button onclick="location.href='books.html'" class="dashboard-button">Books Management</button>
+      <button onclick="location.href='orders.html'" class="dashboard-button">Order Details</button>
+    </div>
   </main>
 
   <footer class="admin-footer">
@@ -115,5 +29,3 @@
   </footer>
 </body>
 </html>
-
-
