--- a/catindawg-main/html/genre.html
+++ b/catindawg-main/html/genre.html
@@ -37,17 +37,17 @@
                 <div class="genre-dropdown">
                     <button class="genre-button">Genres</button>
                     <div class="genre-options">
-                        <a href="#" data-genre="action">Action</a>
-                        <a href="#" data-genre="adventure">Adventure</a>
-                        <a href="#" data-genre="comedy">Comedy</a>
-                        <a href="#" data-genre="drama">Drama</a>
-                        <a href="#" data-genre="educational">Educational</a>
-                        <a href="#" data-genre="fantasy">Fantasy</a>
-                        <a href="#" data-genre="history">History</a>
-                        <a href="#" data-genre="horror">Horror</a>
-                        <a href="#" data-genre="romance">Romance</a>
-                        <a href="#" data-genre="romcom">Romcom</a>
-                        <a href="#" data-genre="selfhelp">Selfhelp</a>
+                        <a href="../html/genre.html?genre=action">Action</a>
+                        <a href="../html/genre.html?genre=adventure">Adventure</a>
+                        <a href="../html/genre.html?genre=comedy">Comedy</a>
+                        <a href="../html/genre.html?genre=drama">Drama</a>
+                        <a href="../html/genre.html?genre=educational">Educational</a>
+                        <a href="../html/genre.html?genre=fantasy">Fantasy</a>
+                        <a href="../html/genre.html?genre=history">History</a>
+                        <a href="../html/genre.html?genre=horror">Horror</a>
+                        <a href="../html/genre.html?genre=romance">Romance</a>
+                        <a href="../html/genre.html?genre=romcom">Romcom</a>
+                        <a href="../html/genre.html?genre=selfhelp">Selfhelp</a>
                     </div>
                 </div>
             </div>
@@ -84,7 +84,7 @@
                         </div>
                     </div>
                     <div class="book-item" data-genres="action">
-                        <img src="../images/abactioncover.jpg" alt="Action">
+                        <img src="../images/newlogo.jpg" alt="Action">
                         <div class="book-info">
                             <p>Action</p>
                             <button class="stars">Rent</button>
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                     <div class="book-item" data-genres="adventure">
-                        <img src="../images/abadventurecover.webp" alt="Adventure">
+                        <img src="../images/newlogo.jpg" alt="Adventure">
                         <div class="book-info">
                             <p>Adventure</p>
                             <button class="stars">Rent</button>
@@ -113,7 +113,7 @@
                     </div>
 
                     <div class="book-item" data-genres="comedy">
-                        <img src="../images/abcomedycover.webp" alt="Comedy">
+                        <img src="../images/newlogo.jpg" alt="Comedy">
                         <div class="book-info">
                             <p>Comedy</p>
                             <button class="stars">Rent</button>
@@ -168,7 +168,7 @@
                     </div>
 
                     <div class="book-item" data-genres="drama">
-                        <img src="../images/abcomedycover.webp" alt="Comedy">
+                        <img src="../images/newlogo.jpg" alt="Comedy">
                         <div class="book-info">
                             <p>Comedy</p>
                             <button class="stars">Rent</button>
@@ -186,7 +186,7 @@
                     </div>
 
                     <div class="book-item" data-genres="educational">
-                        <img src="../images/abcomedycover.webp" alt="Comedy">
+                        <img src="../images/newlogo.jpg" alt="Comedy">
                         <div class="book-info">
                             <p>Comedy</p>
                             <button class="stars">Rent</button>
@@ -213,7 +213,7 @@
                     </div>
 
                     <div class="book-item" data-genres="history">
-                        <img src="../images/abcomedycover.webp" alt="Comedy">
+                        <img src="../images/newlogo.jpg" alt="Comedy">
                         <div class="book-info">
                             <p>Comedy</p>
                             <button class="stars">Rent</button>
@@ -230,7 +230,7 @@
                         </div>
                     </div>
                     <div class="book-item" data-genres="horror">
-                        <img src="../images/abcomedycover.webp" alt="Comedy">
+                        <img src="../images/newlogo.jpg" alt="Comedy">
                         <div class="book-info">
                             <p>Comedy</p>
                             <button class="stars">Rent</button>
@@ -247,7 +247,7 @@
                         </div>
                     </div>
                     <div class="book-item" data-genres="romance">
-                        <img src="../images/abcomedycover.webp" alt="Comedy">
+                        <img src="../images/newlogo.jpg" alt="Comedy">
                         <div class="book-info">
                             <p>Comedy</p>
                             <button class="stars">Rent</button>
@@ -280,7 +280,6 @@
                         </div>
                     </div>
                     
-                    <!-- More book items -->
                 </section>
             </div>
         </div>
