--- a/catindawg-main/html-book/book.html
+++ b/catindawg-main/html-book/book.html
@@ -33,24 +33,24 @@
             <a href="../html/register.html" class="register">REGISTER</a>
         </div>
         <div class="search-bar">
-            <input type="text" placeholder="Search">
-            <div class="genre-dropdown">
-                <button class="genre-button">Genres</button>
-                <div class="genre-options">
-                    <a href="#" data-genre="action">Action</a>
-                    <a href="#" data-genre="adventure">Adventure</a>
-                    <a href="#" data-genre="comedy">Comedy</a>
-                    <a href="#" data-genre="drama">Drama</a>
-                    <a href="#" data-genre="educational">Educational</a>
-                    <a href="#" data-genre="fantasy">Fantasy</a>
-                    <a href="#" data-genre="history">History</a>
-                    <a href="#" data-genre="horror">Horror</a>
-                    <a href="#" data-genre="romance">Romance</a>
-                    <a href="#" data-genre="romcom">Romcom</a>
-                    <a href="#" data-genre="selfhelp">Selfhelp</a>
-                </div>
+          <input type="text" placeholder="Search">
+          <div class="genre-dropdown">
+            <button class="genre-button">Genres</button>
+            <div class="genre-options">
+                <a href="../html/genre.html?genre=action">Action</a>
+                <a href="../html/genre.html?genre=adventure">Adventure</a>
+                <a href="../html/genre.html?genre=comedy">Comedy</a>
+                <a href="../html/genre.html?genre=drama">Drama</a>
+                <a href="../html/genre.html?genre=educational">Educational</a>
+                <a href="../html/genre.html?genre=fantasy">Fantasy</a>
+                <a href="../html/genre.html?genre=history">History</a>
+                <a href="../html/genre.html?genre=horror">Horror</a>
+                <a href="../html/genre.html?genre=romance">Romance</a>
+                <a href="../html/genre.html?genre=romcom">Romcom</a>
+                <a href="../html/genre.html?genre=selfhelp">Selfhelp</a>
             </div>
         </div>
+        
     </div>
 </header>
 
@@ -102,7 +102,7 @@
                     <img src="../images/lion.jpg" alt="Out">
                     <div class="book-info">
                         <p>A Lion Among Men: <br> Volume Three  in the Wicked Years</p>
-                        <a href="../html-book/book4.html" class="stars">Rent</a>
+                        <a href="../html-book/book3.html" class="stars">Rent</a>
   
                     </div>
                 </div>
@@ -111,7 +111,7 @@
                 <div class="book-item" data-genres="fantasy">
                 <img src="../images/out.jpg" alt="Romance Book">
                   <div class="book-info">
-                    <p>Out of Oz: The Final <br> Volume in the Wicked Years 
+                    <p>Out of Oz: The Final <br> Volume in the Wicked Years</p> 
                       <a href="../html-book/book4.html" class="stars">Rent</a>
                   </div>
                 </div>
