--- a/catindawg-main/html-book/book.html
+++ b/catindawg-main/html-book/book.html
@@ -72,7 +72,7 @@
           </p>
           <p class="book-description-text">Wicked by Gregory Maguire reimagines The Wonderful Wizard of Oz from the perspective of Elphaba, the misunderstood and green-skinned woman who becomes the Wicked Witch of the West. The novel explores her complex relationships, including with Glinda the Good Witch, and delves into themes of power, prejudice, and moral ambiguity. Through Elphaba’s journey, Wicked challenges the traditional notions of good and evil, offering a fresh and thought-provoking take on the classic story.</p>
           <a href="../html/login.html" class="stars">Rent</a>
-          <button class="stars">QR code</button>
+          <a href="../html/login.html" class="stars">QR</a>
 
         </div>
       </div>
