--- a/catindawg-main/html-book/book2.html
+++ b/catindawg-main/html-book/book2.html
@@ -69,8 +69,9 @@
 
           </p>
           <p class="book-description-text">The Wicked Years continue in Gregory Maguire’s Son of a Witch—the heroic saga of the hapless yet determined young man who may or may not be the offspring of the fabled Wicked Witch of the West. A New York Times bestseller like its predecessor, the remarkable Wicked, Son of a Witch follows the boy Liir on his dark odyssey across an ingeniously re-imagined and nearly unrecognizable Land of Oz—a journey that will take him deep into the bowels of the Emerald City, lately abandoned by the Wizard, and into the jaws of dragons. At once a grim fairy tale and an uplifting adventure, Son of a Witch is a true wonder.</p>
-          <button class="stars">Rent</button>
-          <button class="stars">QR code</button>
+          <a href="../html/login.html" class="stars">Rent</a>
+          <a href="../html/login.html" class="stars">QR</a>
+
 
         </div>
       </div>
