--- a/catindawg-main/html/contactus.html
+++ b/catindawg-main/html/contactus.html
@@ -9,6 +9,8 @@
 	
 <div class="wrapper">
   <div class="title">
+    <a href="../html/home.html" class="stars">Home</a>
+
     <h1>Have a message? Contact Us!</h1>
   </div>
   <div class="contact-form">
