--- a/catindawg-main/html-book/book3.html
+++ b/catindawg-main/html-book/book3.html
@@ -72,8 +72,9 @@
             to life and gets to tell his remarkable tale. It is a story of oppression and fear in a world gone mad 
             with war fever—of Munchkins, Wizards, and Wicked Witches—and especially of a gentle soul and determined 
             survivor who is truly A Lion Among Men..</p>
-          <button class="stars">Rent</button>
-          <button class="stars">QR code</button>
+            <a href="../html/login.html" class="stars">Rent</a>
+            <a href="../html/login.html" class="stars">QR</a>
+
 
         </div>
       </div>
