--- a/catindawg-main/html-book/book4.html
+++ b/catindawg-main/html-book/book4.html
@@ -75,8 +75,9 @@
               house arrest and having the cowardly Lion on the lam from the law as the Emerald City prepares to make war on 
               Munchkinland. Even Dorothy makes a triumphant return in Maguire’s magnificent Oz finale—tying up every loose 
               green end of the series he began with his classic Wicked, the basis for the smash hit Broadway musical..</p>
-              <button class="stars">Rent</button>
-              <button class="stars">QR code</button>
+              <a href="../html/login.html" class="stars">Rent</a>
+              <a href="../html/login.html" class="stars">QR</a>
+
         </div>
       </div>
     </main>
